--- a/_config.yml
+++ b/_config.yml
@@ -34,10 +34,11 @@ github_username:  enginbyram
 remote_theme: riggraz/no-style-please
 plugins:
   - jekyll-feed
+  - jekyll-toc
 
 theme_config:
   appearance: "light" # can be "light", "dark" or "auto"
-  back_home_text: "< Geri" # customize text for homepage link in post layout
+  back_home_text: "" # customize text for homepage link in post layout
   date_format: "%Y-%m-%d" # customize how date is formatted
   show_description: false # show blog description in home page
 
