changed entire site, where to starT?

--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -14,5 +14,12 @@
   "newFileFolderPath": "_drafts",
   "alwaysUpdateLinks": true,
   "trashOption": "none",
-  "promptDelete": false
+  "promptDelete": false,
+  "spellcheck": false,
+  "pdfExportSettings": {
+    "pageSize": "A4",
+    "landscape": false,
+    "margin": "0",
+    "downscalePercent": 100
+  }
 }
